5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3985/executions/1635_2445.log
== TEST (2019-04-15 02:11:23) 
-- CODE:
var= input("Variavel: ")
C= float(input("Temp: "))
F=float(input("temp: "))
c= C*1.8+32
f= 1.8*(F-32)
if(var == "c"):
	print(round(c, 2))
else:
	print(round(f, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    F=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 02:12:47) 
-- CODE:
var= input("Variavel: ")
c= C*1.8+32
f= 1.8*(F-32)
if(var == "c"):
	C= float(input("Temp: "))
	print(round(c, 2))
else:
	F=float(input("Temp: "))
	print(round(f, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    c= C*1.8+32
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 02:13:05) 
-- CODE:
var= input("Variavel: ")
c= C*1.8+32
f= 1.8*(F-32)
if(var == "c"):
	C= float(input("Temp: "))
	print(round(c, 2))
else:
	F=float(input("Temp: "))
	print(round(f, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    c= C*1.8+32
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 02:15:21) 
-- CODE:
var= input("Variavel: ")

if(var == "c"):
	f= C*1.8+32
	print(round(f, 2))
else:
	c= 1.8*(F-32)
	print(round(f, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    c= 1.8*(F-32)
NameError: name 'F' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 02:17:43) 
-- CODE:
var= input("Variavel: ")

if(var == "c"):
	g= float(input())
else:
	g= float(input())
	

	
	
	f= (C*1.8)+32
c= 1.8*(F-32)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    f= (C*1.8)+32
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 02:20:05) 
-- CODE:
var= input("Variavel: ")
f= (g*1.8)+32
c= 1.8*(h-32) 

if(var == "c"):
	g= float(input())
	print(round(f, 2))
else:
	print(round(c, 2))
	h= float(input())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    f= (g*1.8)+32
NameError: name 'g' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 02:20:31) 
-- CODE:
var= input("Variavel: ")
i= (g*1.8)+32
d= 1.8*(h-32) 

if(var == "c"):
	g= float(input())
	print(round(i, 2))
else:
	print(round(d, 2))
	h= float(input())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    i= (g*1.8)+32
NameError: name 'g' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 02:21:45) 
-- CODE:
var= input("Variavel: ")

if(var == "c"):
	g= float(input())
	print(round((g*1.8)+32, 2))
else:
	print(round( 1.8*(h-32), 2))
	h= float(input())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round( 1.8*(h-32), 2))
NameError: name 'h' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 02:22:01) 
-- CODE:
var= input("Variavel: ")

if(var == "c"):
	g= float(input())
	print(round((g*1.8)+32, 2))
else:
	print(round( 1.8*(h-32), 2))
	h= float(input())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round( 1.8*(h-32), 2))
NameError: name 'h' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 02:22:20) 
-- CODE:
var= input("Variavel: ")

if(var == "c"):
	g= float(input())
	print(round((g*1.8)+32, 2))
else(var == f):
	print(round( 1.8*(h-32), 2))
	h= float(input())
-- ERROR:
File "XXXX", line 6
    else(var == f):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 02:22:35) 
-- CODE:
var= input("Variavel: ")

if(var == "c"):
	g= float(input())
	print(round((g*1.8)+32, 2))
else(var == "f"):
	print(round( 1.8*(h-32), 2))
	h= float(input())
-- ERROR:
File "XXXX", line 6
    else(var == "f"):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 02:22:43) 
-- CODE:
var= input("Variavel: ")

if(var == "c"):
	g= float(input())
	print(round((g*1.8)+32, 2))
else:
	print(round( 1.8*(h-32), 2))
	h= float(input())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round( 1.8*(h-32), 2))
NameError: name 'h' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 02:22:58) 
-- CODE:
var= input("Variavel: ")

if(var == "C"):
	g= float(input())
	print(round((g*1.8)+32, 2))
else:
	print(round( 1.8*(h-32), 2))
	h= float(input())
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 02:23:32) 
-- CODE:
var= input("Variavel: ")

if(var == "C"):
	g= float(input())
	print(round((g*1.8)+32, 2))
else:
	h= float(input())
	print(round( 1.8*(h-32), 2))
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 02:23:44) 
-- CODE:
var= input("Variavel: ")

if(var == "C"):
	g= float(input())
	print(round((g*1.8)+32, 2))
else:
	h= float(input())
	print(round( 1.8*(h-32), 2))
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 02:24:46) 
-- CODE:
var= input("Variavel: ")

if(var == "C"):
	g= float(input())
	print(round((g*1.8)+32, 2))
else:
	h= float(input())
	print(round( 1.8/(h-32), 2))
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 02:25:19) 
-- CODE:
var= input("Variavel: ")

if(var == "C"):
	g= float(input())
	print(round((g*1.8)+32, 2))
else:
	h= float(input())
	print(round((h-32)/1.8, 2))
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 02:25:26) 
-- CODE:
var= input("Variavel: ")

if(var == "C"):
	g= float(input())
	print(round((g*1.8)+32, 2))
else:
	h= float(input())
	print(round((h-32)/1.8, 2))
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 02:25:35) 
-- CODE:
var= input("Variavel: ")

if(var == "C"):
	g= float(input())
	print(round((g*1.8)+32, 2))
else:
	h= float(input())
	print(round((h-32)/1.8, 2))
-- EXECUTION TIME:
0.225274
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
